fix alignment of first heading with date/type in sidebar

--- a/components/article-wrap/index.css
+++ b/components/article-wrap/index.css
@@ -4,6 +4,11 @@
   padding-top: calc(var(--vr) * 2);
   padding-bottom: calc(var(--vr) * 2);
 
+  /* fix alignment of first heading */
+  &__main > :matches(h3, .heading-card):first-child {
+    margin-top: -calc((1.25rem - 1rem) / 2);
+  }
+
   &__aside-box {
     &:not(:first-child) {
       padding-top: var(--vr);
